VERSION 0.9.8
-------------
Release Date: ?

 - modified method setColumns() of Peak_View_Helper_Grid for trimming the keys of columns
 - added a param to method getAction() of class Peak_Controller_Action to return action without the prefix
 - updated class Peak_View_Helper_Debugbar to use REQUEST_TIME or REQUEST_TIME_FLOAT of $_SERVER instead of Peak_Chrono
 - changed method baseUrl() from class Peak_View_Render to detect properly https url
 - updated method Peak_Controller_Action::redirectUrl() to use Peak_View_Header class

VERSION 0.9.7
-------------
Release Date: 2013-09-02

 - deleted Peak_View_Helper_Js class given that Peak_View_Helper_Assets do the same thing
 - added method exists() to Peak_View_Helper_Assets
 - deleted deprecated Peak_View_Helper_Html class
 - deleted Peak_View_Helper_Download class given that Peak_View_Header class is implementing this functionnality
 - moved code of Peak_View_Helper_Redirect to new class Peak_View_Header and deleted Peak_View_Helper_Redirect
 - enhanced Peak_Controller_Internal_PkError debug trace output and maded various fixes
 - added in class Peak_View_Header methods codeAsStr(), holdOn(), holdOff(), renamed resetHeader() to reset() and 
   finally added some params to method release() and setRCode()
 - added method header() to Peak_View and modified method render() t<o support this new method
 - added new class Peak_View_Header to facilitate view http headers
 - added method getTriggerTrace() to Peak_Exception. This method retreive element trace who triggered the exception
 - added methods swapKey(), swapKeyVal(), swapKeyValCallback() to Peak_Model_Zendatable
 - added the notion of param(s) after url to Peak_View_Helper_Assets
 - added method getLang() to class Peak_Lang
 - modified option punc of method _filter_alpha() in class Peak_Filters_Advanced to accept also a string as list of punctuations
 - added param $force_insert to method save() of class Peak_Model_Zendatable
 - updated debugbar.js